--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     <form action="add_todo.php" method="post" id="form">
         <h2>Enter Your TODO Details</h2>
         <input placeholder="Enter Todo" id="name" name="name" type="text" />
-        <input placeholder="Enter Todo description" type="text" name="text" id="qty" />
+        <input placeholder="Enter Todo Description" type="text" name="text" id="qty" />
         <select name="priority" id="priority">
-            <option value="--">Select Priority</option>
-            <option value="high">High</option>
-            <option value="medium">Medium</option>
+            <option value="--">Select Priority</option><hr>
+            <option value="high">High</option><hr>
+            <option value="medium">Medium</option><hr>
             <option value="low">Low</option>
         </select>
         <input id="submit" type="submit" name="submit" value="Submit" />
