--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="Styles/index.css">
-    <script src="Scripts/validation.js"></script>
 </head>
 
 <body>
@@ -16,11 +15,12 @@
         <div><a href="index.html">Home</a></div>
         <div><a href="todo.html">Todo List</a></div>
         <div><a href="completed.html">Completed Todo's</a></div>
+        <div><a href="logout.php">Logout</a></div> <!-- Logout Button -->
     </div>
 
     <main>
         <form action="add_todo.php" method="post" id="form" onsubmit="return validateForm()">
-            <h2>Enter Your TODO Details</h2>
+            <h2>Enter Your Todo Details</h2>
             <input placeholder="Enter Todo" id="name" name="name" type="text" />
             <div id="nameError" class="error"></div>
 
@@ -28,9 +28,9 @@
             <div id="qtyError" class="error"></div>
 
             <select name="priority" id="priority">
-                <option value="--">Select Priority</option><hr>
-                <option value="high">High</option><hr>
-                <option value="medium">Medium</option><hr>
+                <option value="--">Select Priority</option>
+                <option value="high">High</option>
+                <option value="medium">Medium</option>
                 <option value="low">Low</option>
             </select>
             <div id="priorityError" class="error"></div>
@@ -42,6 +42,8 @@
             <input id="submit" type="submit" name="submit" value="Submit" />
         </form>
     </main>
+
+    <script src="Scripts/validation.js"></script>
 
 </body>
 
