--- a/todo.html
+++ b/todo.html
@@ -15,6 +15,7 @@
         <div><a href="index.html">Home</a></div>
         <div><a href="todo.html">Todo List</a></div>
         <div><a href="completed.html">Completed Todo's</a></div>
+        <div><a href="logout.php">Logout</a></div>
     </div>
 
     <main>
