--- a/todo.html
+++ b/todo.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo List</title>
     <link rel="stylesheet" href="Styles/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
     </div>
 
     <main>
-        <h2>Todo List</h2>
+        <h3>Todo List</h3>
         <table class="todo-table">
             <thead>
                 <tr>
